--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "google-maps": "^4.2.3",
     "moment": "^2.24.0",
