--- a/package.json
+++ b/package.json
@@ -66,10 +66,9 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "dayjs": "^1.8.23",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "google-maps": "^4.2.3",
-    "moment": "^2.24.0",
-    "tailwindcss": "^1.2.0"
+    "google-maps": "^4.2.3"
   }
 }
