--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint \"src/**/*.js\"",
     "format": "prettier --config .prettierrc --write  \"./src/**/*.js\"",
     "start": "webpack-dev-server --open --config webpack.config.dev.js",
-    "build": "NODE_ENV=production webpack --config webpack.config.prod.js"
+    "build": "NODE_ENV=production webpack --config webpack.config.prod.js",
+    "style": "postcss src/style/tailwind.css -o src/style/tailwind/tailwind.css"
   },
   "repository": {
     "type": "git",
@@ -62,6 +63,12 @@
     }
   },
   "dependencies": {
-    "core-js": "^3.6.4"
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "core-js": "^3.6.4",
+    "dayjs": "^1.8.23",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "google-maps": "^4.2.3"
   }
 }
