Add Cities Pollution Issue Values [Ticket: 08]

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,5 @@
-API_KEY="ENEHH7afQtN3sN9X5psV0fog0%2BMCKXGRjflug%2BpyKQ82GABJgO6C1l2mLcV7fKZcfb0%2BvciAqyrrsr7ZTiwGxA%3D%3D"
+API_KEY=CmqzFnt8hf0zVgntZAA8VnddWslxT8MEPtaFjTOE35s%2BSl9coI%2BukxS%2FMuhEyQXACW1TbSIu%2Bduu5oankKsykQ%3D%3D&pag
+BASE_URL_OPEN_API=http://openapi.airkorea.or.kr/openapi/services/rest
+
+
+
