--- a/package.json
+++ b/package.json
@@ -68,10 +68,11 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
-    "express": "^4.17.1",
-    "google-maps": "^4.2.3",
-    "moment": "^2.24.0",
     "proj4": "^2.6.0",
-    "tailwindcss": "^1.2.0"
+    "tailwindcss": "^1.2.0",
+    "dayjs": "^1.8.23",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "google-maps": "^4.2.3"
   }
 }
